CIMA_POC/Componentes_core/kubernetes/kibana/kibana-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: cima-logging
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      volumes:
      - name: kibana-keystore
        secret:
          secretName: kibana-keystore
      - name: kibana-config
        configMap:
          name: kibana-config
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:8.1.2
        volumeMounts:
        - mountPath: usr/share/kibana/config/kibana.yml
          name: kibana-config
          readOnly: true
          subPath: kibana.yml
        - name: kibana-keystore
          mountPath: /usr/share/kibana/config/kibana.keystore
          subPath: kibana.keystore
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
